Rely on project's `application.conf`

--- a/ts/src/main/resources/application.conf
+++ b/ts/src/main/resources/application.conf
@@ -7,6 +7,7 @@ akka {
   loglevel = "DEBUG"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
+    serialize-creators = on
   }
   remote {
     # log-sent-messages = on
