Cannot use inner classes as messages with Remoting

--- a/ts/src/main/resources/application.conf
+++ b/ts/src/main/resources/application.conf
@@ -7,7 +7,10 @@ akka {
   loglevel = "DEBUG"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
+    
+    // TODO: remove when in a production context
     serialize-creators = on
+    serialize-messages = on
   }
   remote {
     # log-sent-messages = on
