--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -63,7 +63,7 @@ logger.application=DEBUG
 # Akka
 # ~~~~~
 akka {
-  loglevel = "DEBUG"
+  # loglevel = "DEBUG"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
   }
