--- a/ts/src/main/resources/application.conf
+++ b/ts/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
   # the frontend to lookup the backend actor system)
   systemName = "TradingSimulation"
 
-  #loglevel = "DEBUG"
+  loglevel = "INFO"
 
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
