Use individual actor selection paths for different types of component to reduce the load on the frontend

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -83,4 +83,10 @@ akka.backend {
   systemName = "TradingSimulation"
   hostname = "localhost"
   port = 5353
+  fetcherActorSelection = "/user/*"
+  traderActorSelection = "/user/*"
+  marketActorSelection = "/user/*"
 }
+
+
+
