Add EvaluationReport statistics as a separate tab

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -86,6 +86,7 @@ akka.backend {
   fetcherActorSelection = "/user/*"
   traderActorSelection = "/user/*"
   marketActorSelection = "/user/*"
+  evaluationActorSelection = "/user/*"
 }
 
 
