Use backend trader hierarchy for more efficient actor selection

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -83,10 +83,10 @@ akka.backend {
   systemName = "TradingSimulation"
   hostname = "localhost"
   port = 5353
-  fetcherActorSelection = "/user/*"
-  traderActorSelection = "/user/*"
-  marketActorSelection = "/user/*"
-  evaluationActorSelection = "/user/*"
+  fetchersActorSelection = "/user/fetchers/*"
+  tradersActorSelection = "/user/traders/*"
+  marketsActorSelection = "/user/markets/*"
+  evaluatorsActorSelection = "/user/evaluators/*"
 }
 
 
